<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="tb_munion_tip_download_prefix">Downloading</string>
    <string name="umeng_common_action_info_exist">The app is already in downloading list.</string>
    <string name="umeng_common_info_interrupt">dowload interrupted.</string>
    <string name="umeng_common_action_pause">Pause</string>
    <string name="umeng_common_action_continue">Continue</string>
    <string name="umeng_common_action_cancel">Cancel</string>
    <string name="umeng_common_download_notification_prefix">Downloading:</string>
    <string name="umeng_common_pause_notification_prefix">Pause:</string>
    <string name="umeng_common_start_download_notification">Download start.</string>
    <string name="umeng_common_start_patch_notification">Patch start.</string>
    <string name="umeng_common_network_break_alert">Please make sure you are connected to internet, download failed</string>
    <string name="umeng_common_download_failed">Download Failed!</string>
    <string name="umeng_common_download_finish">Download finished,click to install it.</string>
    <string name="umeng_common_patch_finish">Patch finished,click to install it.</string>
    <string name="umeng_common_silent_download_finish">New version is ready,click to install it.</string>
    <string name="umeng_common_icon">icon</string>
    <string name="default_theme_title">Default</string>
    <string name="home_title_ol">Themes</string>
    <string name="home_btn_local">Local</string>
    <string name="home_btn_mix">Mixer</string>
    <string name="title_remmend">Recommends</string>
    <string name="help_title">Help</string>
    <string name="title_local">My Theme</string>
    <string name="btn_network">Set</string>
    <string name="app_name">Themes</string>
    <string name="app_cursor">Cursor</string>
    <string name="start_download">downloading, please wait.</string>
    <string name="file_downloaded">File exists, do not need to re-download</string>
    <string name="file_download_more">File while downloading, please wait.</string>
    <string name="file_download_complete">Download completed</string>
    <string name="alert_delete">Are you sure to delete?</string>
    <string name="deleting">Deleting</string>
    <string name="loading">Loading, please wait</string>
    <string name="loading_faild">Sorry, get data failed, please wait.</string>
    <string name="delete_faild">Sorry, delete failed</string>
    <string name="menu_settings">Settings</string>
    <string name="onekey_app_name">Switching</string>
    <string name="tab_title_custom">Custom</string>
    <string name="tab_title_search">Search</string>
    <string name="tab_title_theme">Theme</string>
    <string name="tab_title_wallpaper">Wallpaper</string>
    <string name="tab_title_lockscreen">Lock screen</string>
    <string name="tab_title_font">Fonts</string>
    <string name="tab_title_ring">Ring</string>
    <string name="tab_title_boutique">Boutique</string>
    <string name="tab_title_rank">Rank</string>
    <string name="tab_title_cate">Category</string>
    <string name="tab_title_mytheme">Local Theme</string>
    <string name="tab_title_static_wallpaper">Wallpaper</string>
    <string name="tab_title_dynamic_wallpaper">Live Wallpaper</string>
    <string name="tab_title_download_ringtone">Other Ring</string>
    <string name="tab_title_local_ringtone">System Ring</string>
    <string name="wallpaper_apply_success_tip">Success</string>
    <string name="title_local_icon">Icons</string>
    <string name="title_local_lockscreen">Lock screen</string>
    <string name="title_local_fonts">Fonts</string>
    <string name="title_local_ringtone">Ring tone</string>
    <string name="title_local_wallpaper">Wallpaper</string>
    <string name="title_local_lock_wallpaper">Lock Wallpaper</string>
    <string name="title_local_dynamic_wallpaper">Live Wallpaper</string>
    <string name="font_apply_success_tip">Success</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancle">Cancel</string>
    <string name="btn_apply">Apply</string>
    <string name="btn_use">Set</string>
    <string name="btn_play">Play</string>
    <string name="btn_set">Set</string>
    <string name="btn_retry">Retry</string>
    <string name="btn_refresh">Refresh</string>
    <string name="btn_yes">OK</string>
    <string name="btn_no">Cancel</string>
    <string name="btn_download">Download</string>
    <string name="btn_install">Install</string>
    <string name="btn_downloading">Downloading</string>
    <string name="theme_description">Description</string>
    <string name="theme_custom">Customize Themes</string>
    <string name="custom_icon">Icons</string>
    <string name="custom_lockscreen">Lock screen</string>
    <string name="custom_lock_wallpaper">Lock wallpaper</string>
    <string name="custom_wallpaper">Wallpaper</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="custom_dynamic_wallpaper">Live wallpaper</string>
    <string name="custom_fonts">Fonts</string>
    <string name="custom_ringtone">Ring tone</string>
    <string name="custom_reminder_wallpaper">Reminder wallpaper</string>
    <string name="ringtone_item_notice">Notice</string>
    <string name="error_empty">No match available</string>
    <string name="error_low_speed">Bad network condition, Please refresh the page later</string>
    <string name="error_network_low_speed">Please check network and try again</string>
    <string name="error_listfooter_network_error">Network link error</string>
    <string name="check_network_error">Please check your network state</string>
    <string name="ringtone_item_phone">Phone</string>
    <string name="ringtone_item_sms">SMS</string>
    <string name="ringtone_item_alarm">Alarm</string>
    <string name="ringtone_item_delete">Delete</string>
    <string name="wallpaper_preview_tip">Wallpaper preview</string>
    <string name="wallpaper_apply_lockscreen_wallpaper">Lockscreen wallpaper</string>
    <string name="wallpaper_apply_desktop_wallpaper">Desktop wallpaper</string>
    <string name="wallpaper_apply_all_wallpaper">both</string>
    <string name="ringtone_set_success">Success</string>
    <string name="dlg_theme_failed_title">Theme apply failed !</string>
    <string name="dlg_theme_failed_body">Application Error .\n\nPlease reapply or replace another.</string>
    <string name="configure_wallpaper">Settings…</string>
    <string name="wallpaper_instructions">Set wallpaper</string>
    <string name="live_wallpaper_loading">Loading live wallpaper…</string>
    <string name="permlab_read_settings">Read Home settings and shortcuts</string>
    <string name="permdesc_read_settings">Allows an application to read the settings and shortcuts in Home.</string>
    <string name="permlab_write_settings">Write Home settings and shortcuts</string>
    <string name="permdesc_write_settings">Allows an application to change the settings and shortcuts in Home.</string>
    <string name="applying_theme">Applying...</string>
    <string name="applying_icons">Applying...</string>
    <string name="applying_wallpaper">Applying...</string>
    <string name="applying_lockscreen">Applying...</string>
    <string name="applying_font">Applying...</string>
    <string name="icon_apply_success_tip">Applied Success</string>
    <string name="lockwallpaper_apply_success_tip">Applied Success</string>
    <string name="apply_success_tip">Applied Success</string>
    <string name="dlg_update_or_not_title">Update tips</string>
    <string name="dlg_update_not_title">Version</string>
    <string name="dlg_update_not_msg">This is the latest version:</string>
    <string name="dlg_request_permission">Apply for permission</string>
    <string name="apply_failed_tip">Failed</string>
    <string name="apply_failed_tip_once">Only one theme, cannot switched</string>
    <string name="dlg_update_or_not_msg">New version available ,update?\n</string>
    <string name="update_theme_hint">Theme Manager can update a new version</string>
    <string name="net_work_hint">The theme manager app is a free security system application, in use process may get your location and produce a small amount of data traffic fee, please consult the local operators. Whether or not to continue to use?</string>
    <string name="hide_hint">No longer prompt</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_ok">OK</string>
    <string name="delete">Delete</string>
    <string name="load">Load</string>
    <string name="live_apply_success_tip">Applied Success</string>
    <string name="live_apply_fail_tip">Applied failed</string>
    <string name="sd_unmounted">Default Storage is in use</string>
    <string name="tab_local_theme">Local</string>
    <string name="aciton_bar_local">Local</string>
    <string name="theme_detail_actionbar_title">ThemeDetails</string>
    <string name="aciton_bar_online">OnLine</string>
    <string name="installing">Installing</string>
    <string name="new_app_name">Theme Park</string>
    <string name="wallpaper_detail">Wallpaper Detail</string>
    <string name="lockscreen_detail">Lockscreen Detail</string>
    <string name="author_lable">Author :</string>
    <string name="size_lable">Size :</string>
    <string name="price_lable">Price :</string>
    <string name="default_price">$0.0</string>
    <string name="default_price_text">Free</string>
    <string name="buyed_text">Purchased</string>
    <string name="btn_text_buy">Buy</string>
    <string name="cling_action">Single finger</string>
    <string name="cling_discription">sliding switch</string>
    <string name="cling_know">Got it</string>
    <string name="third_err">Sorry,Load error</string>
    <string name="custom_local_dynamic_wallpaper">Local Live wallpaper</string>
    <string name="custom_local_fonts">Local Fonts</string>
    <string name="custom_local_icon">Local Icons</string>
    <string name="custom_local_lockscreen">Local Lock screen</string>
    <string name="custom_local_lock_wallpaper">Local Lock wallpaper</string>
    <string name="request_permission_read_phone_state">In order to obtain the configuration information used to initialize models,Theme need to request permission of read phone state.</string>
    <string name="request_permission_external_storage">In order to load or download theme packages,Theme need to request permission of read/write external storage.</string>
    <string name="request_permission_get_accounts">In order to obtain google play service，Theme need to request permission of get user accounts.</string>
    <string name="request_permission_coarse_location">In order to optimize network configuration, choose the most appropriate server，Theme need to request permission of location info.</string>
    <string name="local_wallpaper">Local Wallpaper</string>
    <string name="google_billing_unsupport_tip">Please Check Google billing environment and signed in google account first !</string>
    <string name="sign_in_google">Sign in Google account</string>
    <string name="message_sign_in_google">\nPlease sign in Google account first！\n</string>
    <string name="btn_next">next step</string>
    <string name="apk_deleted">The corresponding APK file has been deleted.</string>
    <string name="text_feedback">Customer Feedback</string>
    <string name="text_update">Check for updates</string>
    <string name="text_more">More</string>
    <string name="install_fail">Install failed,Please check the installation privileges or try to change other theme</string>
    <string name="UMBreak_Network">Please make sure you are connected to internet,update failed</string>
    <string name="UMUpdateTitle">New version found</string>
    <string name="UMNewVersion">Latest version:</string>
    <string name="UMUpdateContent">Update Content</string>
    <string name="UMUpdateSize">Update size:</string>
</resources>