<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/ringtone_list_item_area"
        android:layout_width="match_parent"
        android:layout_height="60dip" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/ringtone_title"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:singleLine="true"
                android:ellipsize="end"
                android:textColor="@color/black"
                android:textSize="19dip" />

            <TextView
                android:id="@+id/ringtone_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color3"
                android:textSize="15dip" />
        </LinearLayout>

        <View
            android:id="@+id/ringtone_space"
            android:layout_width="1dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true" />

        <ImageView
            android:id="@+id/ringtone_play"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:layout_toLeftOf="@id/ringtone_space"
            android:background="@drawable/ic_btn_play"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/using_indicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:layout_toLeftOf="@id/ringtone_space"
            android:background="@drawable/ic_theme_focused"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/ringtone_alarm_flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:layout_toLeftOf="@id/ringtone_play"
            android:background="@drawable/in_rtset_alarm"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/ringtone_sms_flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:layout_toLeftOf="@id/ringtone_alarm_flag"
            android:background="@drawable/in_rtset_notice"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/ringtone_phone_flag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dip"
            android:layout_toLeftOf="@id/ringtone_sms_flag"
            android:background="@drawable/in_rtset_phone"
            android:visibility="gone" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ringtone_list_item_area_ex"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ringtone_list_item_area_ex_height"
        android:layout_marginTop="60dip"
        android:background="@drawable/sub_board"
        android:visibility="gone" >

        <RelativeLayout
            android:id="@+id/ringtone_phone_flag_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/ringtone_phone_flag_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_rtset_phone" />

            <TextView
                android:id="@+id/ringtone_phone_flag_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ringtone_phone_flag_img"
                android:layout_centerHorizontal="true"
                android:text="@string/ringtone_item_phone"
                android:textColor="@color/ringtone_text_color"
                android:textSize="12dip" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ringtone_sms_flag_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/ringtone_sms_flag_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_rtset_notice" />

            <TextView
                android:id="@+id/ringtone_sms_flag_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ringtone_sms_flag_img"
                android:layout_centerHorizontal="true"
                android:text="@string/ringtone_item_notice"
                android:textColor="@color/ringtone_text_color"
                android:textSize="12dip" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ringtone_alarm_flag_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/ringtone_alarm_flag_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_rtset_alarm" />

            <TextView
                android:id="@+id/ringtone_alarm_flag_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/ringtone_alarm_flag_img"
                android:layout_centerHorizontal="true"
                android:text="@string/ringtone_item_alarm"
                android:textColor="@color/ringtone_text_color"
                android:textSize="12dip" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ringtone_delete_flag_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:visibility="gone" >

            <ImageView
                android:id="@+id/ringtone_delete_flag_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:background="@drawable/ic_rtset_delete" />

            <TextView
                android:id="@+id/ringtone_delete_flag_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="28dp"
                android:text="@string/ringtone_item_delete"
                android:textColor="@color/ringtone_text_color"
                android:textSize="12dip" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>